[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/GUIpieces/PersephoneOS.tres" type="Theme" id=1]
[ext_resource path="res://Resources/GUIpieces/commandprompt.png" type="Texture" id=2]
[ext_resource path="res://Commandprompt.gd" type="Script" id=3]
[ext_resource path="res://Resources/GUIpieces/ShellFont.tres" type="DynamicFont" id=11]
[ext_resource path="res://ibar.gd" type="Script" id=12]

[node name="Commandprompt" type="Sprite"]
position = Vector2( 48, 205 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -48, -205 )
script = ExtResource( 3 )

[node name="Dialogue" type="RichTextLabel" parent="."]
margin_left = -38.0
margin_top = -48.0
margin_right = 264.0
margin_bottom = 15.0
theme = ExtResource( 1 )
custom_fonts/normal_font = ExtResource( 11 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkipInput" type="TextureButton" parent="."]
margin_left = -42.0
margin_top = -49.0
margin_right = 268.0
margin_bottom = 13.0
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Control" parent="."]
margin_left = -45.0
margin_top = -60.0
margin_right = 270.0
margin_bottom = 16.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option3" type="Button" parent="Options"]
margin_left = 7.0
margin_top = 40.0
margin_right = 33.0
margin_bottom = 51.0
focus_mode = 0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 11 )
text = "test"
align = 0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option2" type="Button" parent="Options"]
margin_left = 7.0
margin_top = 50.0
margin_right = 33.0
margin_bottom = 61.0
focus_mode = 0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 11 )
text = "test"
align = 0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option1" type="Button" parent="Options"]
margin_left = 7.0
margin_top = 59.0
margin_right = 33.0
margin_bottom = 70.0
focus_mode = 0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 11 )
text = "test"
align = 0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shell" type="Label" parent="."]
margin_left = -33.0
margin_top = -61.0
margin_right = 7.0
margin_bottom = -50.0
theme = ExtResource( 1 )
text = "SHELL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="AutoCloseTimer" type="Timer" parent="."]
one_shot = true

[node name="Voice" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="SkipInput" to="." method="_on_SkipInput_pressed"]
[connection signal="mouse_entered" from="Options/Option3" to="Options/Option3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Options/Option3" to="Options/Option3" method="_on_mouse_exited"]
[connection signal="pressed" from="Options/Option3" to="." method="_on_Option3_pressed" binds= [ "Option3" ]]
[connection signal="mouse_entered" from="Options/Option2" to="Options/Option2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Options/Option2" to="Options/Option2" method="_on_mouse_exited"]
[connection signal="pressed" from="Options/Option2" to="." method="_on_Option3_pressed" binds= [ "Option2" ]]
[connection signal="mouse_entered" from="Options/Option1" to="Options/Option1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Options/Option1" to="Options/Option1" method="_on_mouse_exited"]
[connection signal="pressed" from="Options/Option1" to="." method="_on_Option3_pressed" binds= [ "Option1" ]]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="AutoCloseTimer" to="." method="_on_AutoCloseTimer_timeout"]
